feat: new header;

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,11 @@
 [x-cloak] {
     display: none;
 }
+
+:root {
+    --blue: #2ED9FF;
+
+    --headerBackground: #05060B;
+    --headerAccent: #717F9E;
+    
+}
