feat: add base docs + navbar foda

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,5 +11,15 @@
 
     --headerBackground: #05060B;
     --headerAccent: #717F9E;
-    
+}
+
+.bg-main {
+    background-color: var(--headerBackground);
+}
+
+.header-text {
+    color: var(--headerAccent);
+}
+.header-text-focus {
+    color: #9196a7;
 }
