--- a/resources/js/new/components/Home/HomeHero/hero.module.css
+++ b/resources/js/new/components/Home/HomeHero/hero.module.css
@@ -1,10 +1,17 @@
 .hero {
-    background: url(../../../images/gradient.png) center / 100% 100%, url(../../../images/notes.png) top center / cover;
+    background: url(../../../images/notes.png) top center / cover, url(../../../images/gradient.png) center / 100% 100%;
     background-color: var(--heroBackground);
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #fff;
+}
+
+.hero .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero header {
@@ -62,4 +69,21 @@
     height: 149px;
     bottom: -35px;
     right: -85px;
+}
+
+@media only screen and (min-width: 1500px) {
+    .hero .content {
+        flex-direction: row;
+        justify-content: center;
+        gap: 50px;
+        padding-bottom: 55px;
+    }
+
+    .hero .title {
+        align-items: flex-start;
+    }
+
+    .hero .video {
+        max-width: 820px;
+    }
 }
