--- a/resources/js/new/components/Home/HomeHero/hero.module.css
+++ b/resources/js/new/components/Home/HomeHero/hero.module.css
@@ -77,6 +77,8 @@
         justify-content: center;
         gap: 50px;
         padding-bottom: 55px;
+        padding-left: min(10%, 100px);
+        padding-right: 10px;
     }
 
     .hero .title {
@@ -85,5 +87,15 @@
 
     .hero .video {
         max-width: 820px;
+    }
+
+    .hero .video .gem[data-color="green"] {
+        top: -15px;
+        left: -115px;
+    }
+
+    .hero .video .gem[data-color="blue"] {
+        bottom: -105px;
+        right: 40%;
     }
 }
